package dh.backend.model;

public enum Tipo {
    FREE,
    PREMIUM
}
