package dh.backend.service;

import dh.backend.model.Usuario;

public interface SpotifyService {
    String descargarMusica(Usuario usuario);
}
